--- a/Atreverse/style.css
+++ b/Atreverse/style.css
@@ -1243,6 +1243,12 @@ body {
     display: none;
   }
 }
+
+@media (max-width: 768px) {
+  .primary-navbar #logo img {
+    height: 57%;
+  }
+}
   /*--------------------------------------------------
 
 - [8] - header styles
@@ -1455,6 +1461,8 @@ header.version5 p {
   margin-bottom: 15px;
 }
 
+
+
   /*--------------------------------------------------
 
 - [10] - causes styles
@@ -1661,7 +1669,7 @@ header.version5 p {
 .our-team .team-member p {
   line-height: 1.6;
   color: #818181;
-  height: 6.4em;
+  height: 2.4em;
   margin-bottom: 10px;
   overflow: hidden;
 }
@@ -1771,6 +1779,7 @@ header.version5 p {
   font-size: 22px;
   margin-top: 15px;
   margin-bottom: 30px;
+  color: #4dcec4;
 }
 .post-container .date {
   color: #c0c3c3;
@@ -3034,3 +3043,18 @@ footer .logo {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+  /*--------------------------------------------------
+
+CAMBIOS SOFI
+
+---------------------------------------------------*/
+
+
+  .img-fases {
+    margin-bottom: 30px;
+  }
+
+  .preg-frec {
+    color: #4dcec4;
+  }
